--- a/active-issues.html
+++ b/active-issues.html
@@ -17,7 +17,7 @@
         <div class="sidebar">
             <div class="sidebar-header">
                 <h3>📚 Library MS</h3>
-                <p>Transactions</p>
+                <p>📊 Reports</p>
             </div>
             <div class="user-info" id="userInfo"></div>
             <nav class="sidebar-nav">
