--- a/issue-requests.html
+++ b/issue-requests.html
@@ -17,15 +17,12 @@
 		<div class="sidebar">
 			<div class="sidebar-header">
 				<h3>📚 Library MS</h3>
-				<p>Search & Transactions</p>
+				<p>📊 Reports</p>
 			</div>
 			<div class="user-info" id="userInfo"></div>
 			<nav class="sidebar-nav">
 				<a href="user-home.html">
 					<span>🏠</span> Home
-				</a>
-				<a href="book-available.html" class="active">
-					<span>🔎</span> Search
 				</a>
 				<a href="reports.html">
 					<span>📊</span> Reports
