--- a/overdue-returns.html
+++ b/overdue-returns.html
@@ -17,17 +17,19 @@
 		<div class="sidebar">
 			<div class="sidebar-header">
 				<h3>📚 Library MS</h3>
-				<p>Admin Maintenance</p>
+				<p>📊 Reports</p>
 			</div>
 			<div class="user-info" id="userInfo"></div>
 			<nav class="sidebar-nav">
 				<a href="admin-home.html">
 					<span>🏠</span> Home
 				</a>
-				<a href="maintenance.html" class="active">
-					<span>🔧</span> Maintenance
-				</a>
 				<a href="reports.html">
+					<span>📊</span> Reports
+				</a>
+				<a href="transactions.html">
+					<span>📋</span> Transactions
+				</a>
 					<span>📊</span> Reports
 				</a>
 				<a href="transactions.html">
