--- a/reports.html
+++ b/reports.html
@@ -17,7 +17,7 @@
         <div class="sidebar">
             <div class="sidebar-header">
                 <h3>📚 Library MS</h3>
-                <p id="userRole">User</p>
+                <p>📊 Reports</p>
             </div>
             <div class="user-info" id="userInfo">
                 <!-- User info will be populated here -->
